tests/errors/unknown_attribute_json.ml
let value = 1 [@@rocq_unknown]
